# django-saas

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
core/: settings.py  urls.py
courses/: models.py  tasks.py  tests.py  urls.py  views.py
courses/migrations/: 0001_initial.py
courses/tests/: __init__.py  test_models.py  test_tasks.py  test_utils.py  test_views.py
templates/courses/partials/: quiz_button_fragment.html  quiz_status_fragment.html
