[project]
name = "django-saas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.1",
    "django>=5.2.9",
    "django-environ>=0.12.0",
    "django-tenants>=3.9.0",
    "djangorestframework>=3.16.1",
    "redis>=7.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
